fix: Wrap detail pills in responsive wrapper

--- a/web/style/datavzrd.css
+++ b/web/style/datavzrd.css
@@ -374,6 +374,13 @@ footer {
     display: none;
 }
 
+.detail-pills-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 25vw;
+    line-height: 1.3;
+}
+
 #filter-columns-input {
     min-width: 140px;
 }
